--- a/delivery/index.html
+++ b/delivery/index.html
@@ -6,14 +6,14 @@
 <meta name="HandheldFriendly" content="true" >
 <meta name="MobileOptimized" content="width">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<title>ООО “Спецпромгрупп”</title>
+<title>Доставка и оплата</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="robots" content="index, follow" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="icon" href="/icon/logo.svg" type="image/svg+xml">
 <link rel="stylesheet" href="/style/normalize.css">
-<link rel="stylesheet" href="/style/style.css">
+<link rel="stylesheet" href="/delivery/style/style.css">
 <link rel="stylesheet" href="/feedback/css/form-processing.css">
 <link rel="stylesheet" href="/style/media.css">
 </head>
@@ -22,9 +22,9 @@
     <img src="/icon/logo.svg" alt="logo" width="150px" height="80px">
     <nav>
       <ul>
-       <a href="/index.html" class="active"><li>Главная</li></a>
+       <a href="/index.html"><li>Главная</li></a>
        <a href="/catalogy/index.html"><li>Каталог товаров</li></a>
-        <a href="/delivery/index.html"><li>Доставка и оплата</li></a>
+        <a href="/delivery/index.html" class="active"><li>Доставка и оплата</li></a>
         <a href="/about/index.html"><li>О компании</li></a>
         <a href="/contact/index.html"><li>Контакты</li></a>
       </ul>
@@ -109,89 +109,40 @@
   </div>
 
 
-
-   <!----<div class="chemistry">
-      <h2>Промышленная химия, материалы и оборудование для производственных предприятий</h2>
-      <div class="chemistry-block">
-        <div class="chemisty-katal">
-          <a href="#"> <img src="/icon/peroksid.svg" alt="Кислоты">
-          <h3>Кислоты</h3></a>
-        </div>
-        <div class="chemisty-katal">
-          <a href="#"><img src="/icon/peroksid1.svg" alt="Пероксид">
-          <h3>Пероксиды</h3></a>
-        </div>
-        <div class="chemisty-katal">
-          <a href="#"><img src="/icon/reagen.svg" alt="Реаген">
-          <h3>Реагены для производства пено и газобетона</h3></a>
-        </div>
-        <div class="chemisty-katal">
-          <a href="#"> <img src="/icon/soda.svg" alt="Сода">
-          <h3>Сода</h3></a>
-        </div>
-        <div class="chemisty-katal">
-          <a href="#"> <img src="/icon/dezinf.svg" alt="дезинфекции">
-          <h3>Средства дезинфекции и водоподготовки</h3></a>
-        </div>
-        <div class="chemisty-katal">
-          <a href="#">  <img src="/icon/maslo.svg" alt="Масло">
-          <h3>Масла и смазки</h3></a>
-        </div>
+    <div class="wrapper">
+      <div class="payment">
+        <h2>Оплата</h2>
+        <p>Наша компания работает только с юридическими лицами по наличному и безналичному расчету.</p>
       </div>
-    </div>--> 
-
-    <div class="company">
-      <div class="company-fon">
-          <h2>ООО “Спецпромгрупп”</h2>
-          <p>Компания, деятельностью которой является продажа химических реагентов, материалов и оборудования для производственных предприятий.</p>
-          <p>У нас только качественные химические реактивы по выгодным ценам и также заводская продукция.</p>
-          <div class="company-fon__icon">
-            <div class="icon">
-              <img src="/icon/dostavka.png" alt="Доставка" width="100px" height="100px">
-              <h2>Доставим по России</h2>
-              <p>Контролируем товар на всем пути от завода до Вашего склада</p>
-            </div>
-            <div class="icon">
-              <img src="/icon/shield.png" alt="Доставка" width="100px" height="100px">
-              <h2>Надежно</h2>
-              <p>Компания более 10 лет на рынке, а точнее с 2007 года. </p>
-            </div>
-            <div class="icon">
-              <img src="/icon/support.png" alt="Доставка" width="100px" height="100px">
-              <h2>Поддержка 24/7</h2>
-              <p>Мы всегда с вами на связи</p>
-            </div>
-          </div>
-      </div>
-    </div>
-
-    <div class="catalogy">
-      <div class="catalogy-text">
-        <h2>Каталог продукции</h2>
-        <p>Более 10 лет(с 2007г.) мы профессионально развиваем ассортимент продукции, а также оптимизируем логистику, чтобы поставлять нашим клиентам по всей России только высококачественное химическое сырье по самым лучшим ценам.</p>
-      </div>
-      <div class="catalogy-btn">
-        <a href="#"><button class="kislota"><p>Кислоты</p></button></a>
-        <a href="#"><button class="sir"><p>Сырье</p></button></a>
-        <a href="#"><button class="soda"><p>Сода</p></button></a>
-        <a href="#"><button class="reagent"><p>Реагенты для производства пено и газобетона</p></button></a>
-      </div>
-    </div>
-
-    <div class="advan">
-      <h2>НАШИ ПРЕИМУЩЕСТВА</h2>
-      <div class="advan-position">
-        <div class="advan-block">
-          <img src="/icon/1.png" alt="one" width="100px" height="100px">
-          <p>Качественная продукция от мировых производителей</p>
+      <hr>
+      <h2 class="zagolovok">Доставка</h2>
+      <div class="delivery">
+        <div class="delivery-block">
+          <h2>Доставка по России</h2>
+          <h3>Поставляем продукцию во все регионы России, используя все виды транспорта:</h3>
+          <ul>
+            <li>автотранспорт</li>
+            <li>железнодорожный транспорт (контейнерами, вагонами, цистернами и тд)</li>
+            <li>смешанными перевозками (авто, жд, река, море)</li>
+          </ul>
         </div>
-        <div class="advan-block">
-          <img src="/icon/2.png" alt="two" width="100px" height="100px">
-          <p>Скидки постоянным покупателям</p>
+        <div class="delivery-block">
+          <h2>Отгрузка со склада</h2>
+          <p>Товары отпускаются только по факту зачисления денег на 
+            расчетный счет, при наличии доверенности и документа, удостоверяющего личность.</p>
+          <p>Чтобы успеть оформить все документы и осуществить загрузку в течении дня, просим 
+            приехать не менее чем за 1 час до окончания рабочего времени склада.</p>
         </div>
-        <div class="advan-block">
-          <img src="/icon/3.png" alt="three" width="100px" height="100px">
-          <p>Все всегда в наличии или доступно под заказ</p>
+        <div class="delivery-block">
+          <h2>Расчет стоимости транспортных услуг</h2>
+          <p>Для расчета транспортных услуг клиенту необходимо предоставить информацию 
+            с указанием объема, периодичности и конечного пункта доставки.</p>
+        </div>
+        <div class="delivery-block">
+          <h2>Контроль доставки</h2>
+          <p>Мы всегда проверяем совместимость опасных грузов при хранении и перевозке. 
+            Наши специалисты предоставят информацию 
+            о совместимости опасных грузов при хранении и перевозке, если Вам это необходимо.</p>
         </div>
       </div>
     </div>
@@ -220,37 +171,37 @@
       <a href="#" target="_blank">политика конфиденциальности</a>
     </div>
   </footer>
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" type="text/javascript"></script>
-<script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.js" type="text/javascript"></script>
-<script src="/feedback/js/add.js"></script>
-<script src="/feedback/js/form-processing.js"></script>
-<script>
-  $(".phone_mask").mask("+7(999)999-99-99");
-  /*
-    attachMaxItems: 3,
-    attachMaxFileSize: 128,
-    attachExt: ['png', 'jpg']
-  */
-
-  ItcSubmitForm.getOrCreateInstance('form');
-
-  document.addEventListener('itc.successSendForm', (e) => {
-    const el = e.target.closest('.form-container').querySelector('.form-success');
-    el.classList.remove('form-success_hide');
-  });
-
-  // при клике на .form-success__btn
-  document.querySelector('.form-success__btn').addEventListener('click', (e) => {
-    const el = e.target.closest('.form-container').querySelector('form');
-    const form = ItcSubmitForm.getOrCreateInstance(el);
-    form.reset();
-    location. reload();
-    e.target.closest('.form-container').querySelector('.form-success').classList.add('form-success_hide');
-  });
-
-</script>
-<script src="/script/up.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.js" integrity="sha512-bvxXT2u2PNVKMpHmLR54QQ+qAnhn0dM//5spHP+sjRcnlZSmNMaLkvZXAr8peMHyNlUoDEgNnYIlrUTnr5kNYQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.js" type="text/javascript"></script>
+  <script src="/feedback/js/add.js"></script>
+  <script src="/feedback/js/form-processing.js"></script>
+  <script>
+    $(".phone_mask").mask("+7(999)999-99-99");
+    /*
+      attachMaxItems: 3,
+      attachMaxFileSize: 128,
+      attachExt: ['png', 'jpg']
+    */
+  
+    ItcSubmitForm.getOrCreateInstance('form');
+  
+    document.addEventListener('itc.successSendForm', (e) => {
+      const el = e.target.closest('.form-container').querySelector('.form-success');
+      el.classList.remove('form-success_hide');
+    });
+  
+    // при клике на .form-success__btn
+    document.querySelector('.form-success__btn').addEventListener('click', (e) => {
+      const el = e.target.closest('.form-container').querySelector('form');
+      const form = ItcSubmitForm.getOrCreateInstance(el);
+      form.reset();
+      location. reload();
+      e.target.closest('.form-container').querySelector('.form-success').classList.add('form-success_hide');
+    });
+  
+  </script>
+  <script src="/script/up.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.js" integrity="sha512-bvxXT2u2PNVKMpHmLR54QQ+qAnhn0dM//5spHP+sjRcnlZSmNMaLkvZXAr8peMHyNlUoDEgNnYIlrUTnr5kNYQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
 
