--- a/about/index.html
+++ b/about/index.html
@@ -149,11 +149,11 @@
         <div class="bottom-text__link">
           <div class="bottom-text__link-text">
             <p>Телефон</p>
-            <a href="tel:+77019403367">+7(701)940-33-67</a>
+            <a href="tel:+79521180600">+7(952)118-06-00</a>
           </div>
           <div class="bottom-text__link-text">
             <p>Почта</p>
-            <a href="mailto:specpromkz11@mail.ru">specpromkz11@mail.ru</a>
+            <a href="mailto:Sg2804@mail.ru">Sg2804@mail.ru</a>
           </div>
         </div>
       </div>
