--- a/catalogy/index.html
+++ b/catalogy/index.html
@@ -145,17 +145,17 @@
           <button id="buttonClickProduct" value="Аммиак водный м.Б">Отправить заявку &#8594</button>
         </div>
         <div class="product-catal list" id="list">
-          <a href="#"><img src="/img/995cb3824864ee32ce9863c0f2e5e843.jpg" alt="Азотная кислотa" width="250px" height="250px"></a>
+          <a href="/catalogy/product/azotnaya.html"><img src="/img/995cb3824864ee32ce9863c0f2e5e843.jpg" alt="Азотная кислотa" width="250px" height="250px"></a>
           <h2 class="text" >Азотная кислотa</h2>
           <button id="buttonClickProduct" value="Азотная кислотa">Отправить заявку &#8594</button>
         </div>
         <div class="product-catal list" id="list">
-          <a href="#"><img src="/img/Гипохлорит.jpg" alt="Гипохлорит" width="250px" height="250px"></a>
+          <a href="/catalogy/product/gipohlorid.html"><img src="/img/Гипохлорит.jpg" alt="Гипохлорит" width="250px" height="250px"></a>
           <h2 class="text">Гипохлорит натрия РФ</h2>
           <button id="buttonClickProduct" value="Гипохлорит натрия РФ">Отправить заявку &#8594</button>
         </div>
         <div class="product-catal list" id="list">
-          <a href="#"><img src="/img/Муравьиная.jpg" alt="Муравьиная кислотa" width="250px" height="250px"></a>
+          <a href="/catalogy/product/ant.html"><img src="/img/Муравьиная.jpg" alt="Муравьиная кислотa" width="250px" height="250px"></a>
           <h2 class="text">Муравьиная кислота</h2>
           <button id="buttonClickProduct" value="Муравьиная кислота">Отправить заявку &#8594</button>
         </div>
@@ -377,7 +377,7 @@
           <button id="buttonClickProduct" value="Аммиак водный м.Б">Отправить заявку &#8594</button>
         </div>
         <div class="product-catal">
-          <a href="#"><img src="/img/995cb3824864ee32ce9863c0f2e5e843.jpg" alt="Азотная кислотa" width="250px" height="250px"></a>
+          <a href="/catalogy/product/azotnaya.html"><img src="/img/995cb3824864ee32ce9863c0f2e5e843.jpg" alt="Азотная кислотa" width="250px" height="250px"></a>
           <h2 class="text" >Азотная кислотa</h2>
           <button id="buttonClickProduct" value="Азотная кислотa">Отправить заявку &#8594</button>
         </div>
@@ -408,7 +408,7 @@
 
       <div class="letter" id="charG">
         <div class="product-catal">
-          <a href="#"><img src="/img/Гипохлорит.jpg" alt="Гипохлорит" width="250px" height="250px"></a>
+          <a href="/catalogy/product/gipohlorid.html"><img src="/img/Гипохлорит.jpg" alt="Гипохлорит" width="250px" height="250px"></a>
           <h2 class="text">Гипохлорит натрия РФ</h2>
           <button id="buttonClickProduct" value="Гипохлорит натрия РФ">Отправить заявку &#8594</button>
         </div>
@@ -454,7 +454,7 @@
 
       <div class="letter" id="charM">
         <div class="product-catal">
-          <a href="#"><img src="/img/Муравьиная.jpg" alt="Муравьиная кислотa" width="250px" height="250px"></a>
+          <a href="/catalogy/product/ant.html"><img src="/img/Муравьиная.jpg" alt="Муравьиная кислотa" width="250px" height="250px"></a>
           <h2 class="text">Муравьиная кислота</h2>
           <button id="buttonClickProduct" value="Муравьиная кислота">Отправить заявку &#8594</button>
         </div>
@@ -625,11 +625,11 @@
         <div class="bottom-text__link">
           <div class="bottom-text__link-text">
             <p>Телефон</p>
-            <a href="tel:+77019403367">+7(701)940-33-67</a>
+            <a href="tel:+79521180600">+7(952)118-06-00</a>
           </div>
           <div class="bottom-text__link-text">
             <p>Почта</p>
-            <a href="mailto:specpromkz11@mail.ru">specpromkz11@mail.ru</a>
+            <a href="mailto:Sg2804@mail.ru">Sg2804@mail.ru</a>
           </div>
         </div>
       </div>
