--- a/catalogy/product/ant.html
+++ b/catalogy/product/ant.html
@@ -6,16 +6,16 @@
 <meta name="HandheldFriendly" content="true" >
 <meta name="MobileOptimized" content="width">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<title>Доставка и оплата</title>
+<title>Муравьиная кислотa</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="robots" content="index, follow" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="icon" href="/icon/logo.svg" type="image/svg+xml">
 <link rel="stylesheet" href="/style/normalize.css">
-<link rel="stylesheet" href="/delivery/style/style.css">
+<link rel="stylesheet" href="/catalogy/product/style/style.css">
 <link rel="stylesheet" href="/feedback/css/form-processing.css">
-<link rel="stylesheet" href="/style/media.css">
+<link rel="stylesheet" href="/catalogy/product/style/media.css">
 </head>
 <header>
   <div class="header-up">
@@ -24,7 +24,7 @@
       <ul>
        <a href="/index.html"><li>Главная</li></a>
        <a href="/catalogy/index.html"><li>Каталог товаров</li></a>
-        <a href="/delivery/index.html" class="active"><li>Доставка и оплата</li></a>
+        <a href="/delivery/index.html"><li>Доставка и оплата</li></a>
         <a href="/about/index.html"><li>О компании</li></a>
         <a href="/contact/index.html"><li>Контакты</li></a>
       </ul>
@@ -107,45 +107,29 @@
       
       </div>
   </div>
-
-
-    <div class="wrapper">
-      <div class="payment">
-        <h2>Оплата</h2>
-        <p>Наша компания работает только с юридическими лицами по наличному и безналичному расчету.</p>
-      </div>
-      <hr>
-      <h2 class="zagolovok">Доставка</h2>
-      <div class="delivery">
-        <div class="delivery-block">
-          <h2>Доставка по России</h2>
-          <h3>Поставляем продукцию во все регионы России, используя все виды транспорта:</h3>
-          <ul>
-            <li>автотранспорт</li>
-            <li>железнодорожный транспорт (контейнерами, вагонами, цистернами и тд)</li>
-            <li>смешанными перевозками (авто, жд, река, море)</li>
-          </ul>
-        </div>
-        <div class="delivery-block">
-          <h2>Отгрузка со склада</h2>
-          <p>Товары отпускаются только по факту зачисления денег на 
-            расчетный счет, при наличии доверенности и документа, удостоверяющего личность.</p>
-          <p>Чтобы успеть оформить все документы и осуществить загрузку в течении дня, просим 
-            приехать не менее чем за 1 час до окончания рабочего времени склада.</p>
-        </div>
-        <div class="delivery-block">
-          <h2>Расчет стоимости транспортных услуг</h2>
-          <p>Для расчета транспортных услуг клиенту необходимо предоставить информацию 
-            с указанием объема, периодичности и конечного пункта доставки.</p>
-        </div>
-        <div class="delivery-block">
-          <h2>Контроль доставки</h2>
-          <p>Мы всегда проверяем совместимость опасных грузов при хранении и перевозке. 
-            Наши специалисты предоставят информацию 
-            о совместимости опасных грузов при хранении и перевозке, если Вам это необходимо.</p>
-        </div>
-      </div>
+  <div class="back">
+    <div class="back-link">
+        <a href="/catalogy/index.html"><button>&#8592; Вернуться к каталогу</button></a>
     </div>
+  </div>
+
+  <div class="wrapper">
+    <img src="/img/Муравьиная.jpg" alt="Муравьиная кислота">
+    <div class="wrapper-content">
+        <div class="wrapper-content__heading">
+            <h2>Муравьиная кислота</h2>
+            <hr>
+        </div>
+        <div class="wrapper-content__description">
+            <h2>Описание</h2>
+            <p>Это бесцветная едкая жидкость с резким запахом. 
+                Данное соединение имеет температуру плавления 8,6 °С и температуру кипения 100,6 °С.
+                 В чем еще особенности муравьиной кислоты? Растворимость в воде, бензоле и этиловом спирте или коррозионное 
+                действие являются другими характерными физическими свойствами метановой кислоты.</p>
+        </div>
+        <button id="buttonClickProd" value="Муравьиная кислота">Отправить заявку</button>
+    </div>
+  </div>
   </main>
   
   <footer class="footer">
@@ -200,6 +184,7 @@
     });
   
   </script>
+  <script src="/script/product.js"></script>
   <script src="/script/up.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.js" integrity="sha512-bvxXT2u2PNVKMpHmLR54QQ+qAnhn0dM//5spHP+sjRcnlZSmNMaLkvZXAr8peMHyNlUoDEgNnYIlrUTnr5kNYQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
