--- a/contact/index.html
+++ b/contact/index.html
@@ -113,27 +113,31 @@
         <div class="contact-block">
           <img src="/icon/phone.png" alt="phone" width="100px" height="100px">
           <div class="contact-block__text">
-            <h3>Телефоны</h3>
-            <a href="tel:+77019403367">+7(701)940-33-67</a>
-            <p>Менеджер</p>
-            <a href="tel:+77017239276">+7(701)723-92-76</a>
-            <p>Менеджер</p>
+            <h3>Телефон</h3>
+            <a href="https://wa.me/79521180600">+7(952)118-06-00</a>
           </div>
         </div>
         <div class="contact-block">
           <img src="/icon/email.png" alt="email" width="100px" height="100px">
           <div class="contact-block__text"> 
             <h3>Почта</h3>
-            <a href="mailto:specpromkz11@mail.ru">specpromkz11@mail.ru</a>
+            <a href="mailto:Sg2804@mail.ru">Sg2804@mail.ru</a>
           </div>
+        </div>
+        <div class="contact-block">
+          <img src="/icon/telegram.png" alt="telegram" width="100px" height="100px">
+          <div class="contact-block__text"> 
+            <h3>Telegram</h3>
+            <a href="https://t.me/SpecpromRU">@SpecpromRU</a>
+          </div> 
         </div>
         <div class="contact-block">
           <img src="/icon/whatsapp.png" alt="whatsapp" width="100px" height="100px">
           <div class="contact-block__text"> 
             <h3>Whatsapp</h3>
-            <a href="https://wa.me/75551234567">+7(701)940-33-67</a>
+            <a href="https://wa.me/79521180600">+7(952)118-06-00</a>
           </div> 
-          </div>
+        </div>
       </div>
       <div class="map">
         <h2>Наше местоположение</h2>
@@ -152,11 +156,11 @@
         <div class="bottom-text__link">
           <div class="bottom-text__link-text">
             <p>Телефон</p>
-            <a href="tel:+77019403367">+7(701)940-33-67</a>
+            <a href="tel:+79521180600">+7(952)118-06-00</a>
           </div>
           <div class="bottom-text__link-text">
             <p>Почта</p>
-            <a href="mailto:specpromkz11@mail.ru">specpromkz11@mail.ru</a>
+            <a href="mailto:Sg2804@mail.ru">Sg2804@mail.ru</a>
           </div>
         </div>
       </div>
