--- a/contact/index.html
+++ b/contact/index.html
@@ -29,7 +29,7 @@
         <a href="/contact/index.html" class="active"><li>Контакты</li></a>
       </ul>
     </nav>
-    <button id="buttonClick"><img src="/icon/phon.png" width="30px" height="30px">Заказать звонок</button>
+    <button id="buttonClick"><img src="/icon/phon.png" width="30px" height="30px"><p>Заказать звонок</p></button>
   </div>
     <div class="menuBtn">
       <span></span>
