--- a/delivery/index.html
+++ b/delivery/index.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="/style/normalize.css">
 <link rel="stylesheet" href="/delivery/style/style.css">
 <link rel="stylesheet" href="/feedback/css/form-processing.css">
-<link rel="stylesheet" href="/style/media.css">
+<link rel="stylesheet" href="/delivery/style/media.css">
 </head>
 <header>
   <div class="header-up">
@@ -29,7 +29,7 @@
         <a href="/contact/index.html"><li>Контакты</li></a>
       </ul>
     </nav>
-    <button id="buttonClick"><img src="/icon/phon.png" width="30px" height="30px">Заказать звонок</button>
+    <button id="buttonClick"><img src="/icon/phon.png" width="30px" height="30px"><p>Заказать звонок</p></button>
   </div>
     <div class="menuBtn">
       <span></span>
