--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="/style/style.css">
 <link rel="stylesheet" href="/feedback/css/form-processing.css">
 <link rel="stylesheet" href="/style/media.css">
+
 </head>
 <header>
   <div class="header-up">
@@ -29,7 +30,7 @@
         <a href="/contact/index.html"><li>Контакты</li></a>
       </ul>
     </nav>
-    <button id="buttonClick"><img src="/icon/phon.png" width="30px" height="30px">Заказать звонок</button>
+    <button id="buttonClick"><img src="/icon/phon.png" width="30px" height="30px"><p>Заказать звонок</p></button>
   </div>
     <div class="menuBtn">
       <span></span>
@@ -45,7 +46,11 @@
       <div class="form-container form__wrapper" id="form">
         <!-- Форма обратной связи -->
         <form id="feedback-form" action="/feedback/form-processing.php" enctype="multipart/form-data" method="post" novalidate>
-              <h1>Оставьте заявку на обратный звонок</h1>
+              <div class="close">
+                <span></span>
+                <span></span>
+              </div>
+            <h1>Оставьте заявку на обратный звонок</h1>
               <p>Наш специалист свяжется с Вами в ближайшее время.
               <br>  Заявка направленная после 17:00 (+7 GMT),
               <br>  обрабатывается на следующий день в рабочее время.</p>
@@ -171,10 +176,10 @@
         <p>Более 10 лет(с 2007г.) мы профессионально развиваем ассортимент продукции, а также оптимизируем логистику, чтобы поставлять нашим клиентам по всей России только высококачественное химическое сырье по самым лучшим ценам.</p>
       </div>
       <div class="catalogy-btn">
-        <a href="#"><button class="kislota"><p>Кислоты</p></button></a>
-        <a href="#"><button class="sir"><p>Сырье</p></button></a>
-        <a href="#"><button class="soda"><p>Сода</p></button></a>
-        <a href="#"><button class="reagent"><p>Реагенты для производства пено и газобетона</p></button></a>
+        <a href="/catalogy/index.html"><button class="kislota"><p>Кислоты</p></button></a>
+        <a href="/catalogy/index.html"><button class="sir"><p>Сырье</p></button></a>
+        <a href="/catalogy/index.html"><button class="soda"><p>Сода</p></button></a>
+        <a href="/catalogy/index.html"><button class="reagent"><p>Реагенты для производства пено и газобетона</p></button></a>
       </div>
     </div>
 
