--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
         <a href="/contact/index.html"><li>Контакты</li></a>
       </ul>
     </nav>
-    <button id="buttonClick"><img src="/icon/phon.png" width="30px" height="30px">Заказать звонок</button>
+    <button id="buttonClick"><img src="/icon/phon.png" width="30px" height="30px"><p>Заказать звонок</p></button>
   </div>
     <div class="menuBtn">
       <span></span>
@@ -119,7 +119,7 @@
             </div>
             <div class="map">
                 <h2>Наше местоположение</h2>
-                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa43fb20fba659135d4d2d675a4afe60408a8a0b34f530420f6685a4f21c9f1a9&amp;width=500px&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script></div>
+                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa43fb20fba659135d4d2d675a4afe60408a8a0b34f530420f6685a4f21c9f1a9&amp;width=100%&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script></div>
         </div>
         <div class="company">
             <div class="company-block">
